@@ -219,6 +219,7 @@ struct GTY(()) incoming_args {
 
 #define INCOMING_ARGS_INFO(INCOMING_ARGS) ((INCOMING_ARGS).info._ca)
 #define MACHINE_FUNCTION(FUNCTION) ((FUNCTION).machine._mf)
+#define CRTL_ASM_CLOBBERS (crtl->asm_clobbers._hrs)
 
 /* Data for function partitioning.  */
 struct GTY(()) function_subsections {
@@ -447,7 +448,7 @@ struct GTY(()) rtl_data {
      asm.  Unlike regs_ever_live, elements of this array corresponding
      to eliminable regs (like the frame pointer) are set if an asm
      sets them.  */
-  HARD_REG_SET asm_clobbers;
+  hard_reg_set_u GTY ((desc ("cfun ? cfun->target_arch : -1"))) asm_clobbers;
 };
 
 #define return_label (crtl->x_return_label)
